# shuttle-cch23

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: shuttle-deploy.yml
.sqlx/: query-0828b7fb0f1b7b099fc833ac20849a73aff713f9f59671f86f3dfcc5cc5f4550.json  query-14c50bf2a1ffe8527571cfbc7759ac9eb467efb5f1cfd2a9211cdba89028b43d.json  query-ad0df8a746fbf31b42f336e4df2b9bd6ca9d06f5f3c9c9b0a15a6222cc9c93d1.json  query-ae79a00f293c7b8eb52b8c7fae51d961726eed2f590dc92dfc019383c12ba94b.json
migrations/: 1_init.sql  2_reinit.sql
src/: main.rs  router.rs
src/advent/: day0.rs  day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  db_common.rs  mod.rs
src/advent/day15/: mod.rs  passwordgame.rs
