[package]
name = "cch23-razzdrgn"
version = "0.12.2"
# Full Revision . Day . Day Revision
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.34"
tokio = "1"
axum = { version = "0.7", features = ["tokio", "http2", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tracing = "0.1"
tower-http = { version = "0.5", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
fancy-regex = "0.12"
base64 = "0.21.5"
headers = "0.4"
num = "0.4.1"
reqwest = "0.11"
image = "0.24"
uuid = { version = "1.6.1", features = ["v8"] }
ulid = { version = "1.1", features = ["serde", "uuid"] }

[lints.clippy]
pedantic = { level = "warn" }
cargo = { level = "warn" }
