[package]
name = "cch23-razzdrgn"
version = "0.20.3"
# Full Revision . Day . Day Revision
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.35"
tokio = "1"
axum = { version = "0.7", features = ["tokio", "http2", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tracing = "0.1"
tower-http = { version = "0.5", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
fancy-regex = "0.12"
base64 = "0.21.5"
headers = "0.4"
num = "0.4.1"
reqwest = "0.11"
image = "0.24"
uuid = { version = "1.6.1", features = ["v8"] }
ulid = { version = "1.1", features = ["serde", "uuid"] }
chrono = { version = "0.4.31", features = ["clock", "std"] }
shuttle-shared-db = { version = "0.35.0", features = ["postgres"] }
sqlx = { version = "0.7", features = [
	"runtime-tokio",
	"postgres",
	"json",
	"macros",
] }
sha256 = "1.4.0"
futures-util = { version = "0.3.29", features = ["sink"] }
tar = "0.4.40"
bytes = { version = "1.5", features = ["std"] }
tempfile = "3.8.1"
git2 = "0.18.1"
hex-utilities = "0.1.5"
s2 = "0.0.12"
dms-coordinates = "1.1.0"
reverse_geocoder = "4.0.0"

[lints.clippy]
pedantic = { level = "warn" }
cargo = { level = "warn" }
